Commons Codec.