@@ -1,13 +1,13 @@
 package it.albertus.codec;
 
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 public class Base64Encoder {
 
 	public static void main(String[] args) {
 		if (args.length == 1) {
 			System.out.println("Input:  \"" + args[0] + "\"");
-			System.out.println("Output: \"" + new BASE64Encoder().encode(args[0].getBytes()).replaceAll("[\\r\\n]", "") + "\"");
+			System.out.println("Output: \"" + Base64.encodeBase64String(args[0].getBytes()).replaceAll("[\\r\\n]", "") + "\"");
 		}
 		else {
 			System.out.println("Usage: Base64Encoder \"Text to encode\"");
